# adventofcode

./: .gitignore  .pre-commit-config.yaml  README.md  day1.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day3.py  day4.py  day5.py  day6.py  day9.py  pyproject.toml  requirements.txt  setup.cfg  utils.py
2017/: day10.py  day11.py  day12.py  day13.py  day2.py  day21.py  day5.py  day6.py  day8.py  day9.py
data/: day13_real
data/y2024/: day14-example
src/: utils.py
src/y2015/: day1.py  day2.py  day3.py  day4.py  day5.py
src/y2016/: day2.py
src/y2017/: day1.py  day10.py  day10_alt.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
src/y2018/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
src/y2019/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  intcode.py  utils.py
src/y2020/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
src/y2021/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
src/y2024/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day2.py  (+7 more)
y2017/: day1.py  day10.py  day10_alt.py  day11.py  day14.py  day16.py  day18.py  day19.py  day20.py  day7.py
y2018/: day1.py  day10.py  day11.py  day15.py  day16.py  day2.py  day22.py  day23.py  day8.py
y2019/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  intcode.py
y2020/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
y2021/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
(+2 files in other folders)
