[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adventofcode"
version = "0.1.0"
description = "Advent of Code solutions"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["parse>=1.20.2"]

[tool.setuptools]
package-dir = { "" = "src" }

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pre-commit>=3.5.0",
    "ruff>=0.8.1",
    "types-editdistance>=0.8.0.20240421",
    "types-pillow>=10.2.0.20240822",
]


[tool.ruff]
line-length = 79
exclude = [
    ".git",
    "__pycache__",
    "*/static/CACHE/*",
    "media",
    "venv",
    "ampli/*",
]

[tool.ruff.lint]
select = ["ALL"]
preview = true
ignore = [
    "T201",
    "ERA001",
    "D",
    "FA",
    "DOC",
    "COM812",
    "CPY001",
    "ISC",
    "Q001",
    "PLR",
    "A001",
    "C901",
    "ANN",
    "FBT",
    "SLF001",
    "PLC",
    "PTH123",
    "PLW",
    "N806",
    "N803",
    "DTZ007",
    "S",
]
allowed-confusables = ["’", " "]

[tool.ruff.format]
quote-style = "single"
preview = true

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"

[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = true

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["list", "filter"]
builtins-allowed-modules = ["email", "statistics", "logging", "keyword"]

[tool.mypy]
warn_unused_configs = true
no_implicit_reexport = true
disallow_subclassing_any = true

# Disallow dynamic typing
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

# Require explicit types
no_implicit_optional = true
strict_optional = true
warn_return_any = true

# Disallow unused "type: ignore" comments
warn_unused_ignores = true

# Require type hints for variables
disallow_any_generics = true
disallow_any_explicit = true
disallow_any_expr = true

# Enforce strict equality checks
strict_equality = true

# Enable warnings for unreachable code and redundant casts
warn_unreachable = true
warn_redundant_casts = true

# Miscellaneous settings
check_untyped_defs = true
implicit_reexport = false
show_error_codes = true

exclude = [".venv"]
